--- a/countrypickerlibrary/build.gradle
+++ b/countrypickerlibrary/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     /*multidex Lib*/
     implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
