--- a/countrypickerlibrary/src/main/AndroidManifest.xml
+++ b/countrypickerlibrary/src/main/AndroidManifest.xml
@@ -1,14 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.country.countrypickerlibrary"
-    xmlns:tools="http://schemas.android.com/tools">
+    package="com.country.countrypickerlibrary">
 
-    <application
-        android:name=".CountryApplication"
-        android:allowBackup="false"
-        android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        tools:replace="android:name">
+    <application>
 
         <activity android:name=".Country_Activity">
         </activity>
